--- a/composer.json
+++ b/composer.json
@@ -12,14 +12,14 @@
         "laravel/tinker": "^2.8"
     },
     "require-dev": {
-        "roave/security-advisories": "dev-latest",
         "fakerphp/faker": "^1.9.1",
         "laravel/breeze": "^1.21",
-        "laravel/pint": "^1.0",
+        "laravel/pint": "^1.11",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
         "phpunit/phpunit": "^10.1",
+        "roave/security-advisories": "dev-latest",
         "spatie/laravel-ignition": "^2.0"
     },
     "autoload": {
@@ -36,6 +36,8 @@
     },
     "scripts": {
         "test": "php artisan test",
+        "lint": "./vendor/bin/pint",
+        "lintt": "./vendor/bin/pint --test",
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
