--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,7 +70,10 @@ jobs:
           echo "DB_USERNAME=${{ steps.create_password.outputs.username }}" >> .env.testing
           echo "DB_PASSWORD=${{ steps.create_password.outputs.password }}" >> .env.testing
           echo "MYSQL_ATTR_SSL_CA=${{ env.MYSQL_ATTR_SSL_CA }}" >> .env.testing
-          php artisan key:generate --env=testing
+          cp .env.example .env
+          php artisan key:generate
+          php artisan config:clear
+          php artisan optimize:clear
         shell: bash
 
       # Run tests
