--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,11 +64,11 @@ jobs:
       - name: Configure Laravel Environment
         run: |
           echo "DB_CONNECTION=mysql" >> .env.testing
-          echo "DB_HOST=${{ steps.create_password.outputs.hostname }}" >> .env.testing
+          echo "DB_HOST=${{ steps.create_password.outputs.hostname }}" >> $GITHUB_ENV
           echo "DB_PORT=3306" >> .env.testing
           echo "DB_DATABASE=${{ env.DATABASE_NAME }}" >> .env.testing
-          echo "DB_USERNAME=${{ steps.create_password.outputs.username }}" >> .env.testing
-          echo "DB_PASSWORD=${{ steps.create_password.outputs.password }}" >> .env.testing
+          echo "DB_USERNAME=${{ steps.create_password.outputs.username }}" >> $GITHUB_ENV
+          echo "DB_PASSWORD=${{ steps.create_password.outputs.password }}" >> $GITHUB_ENV
           echo "MYSQL_ATTR_SSL_CA=${{ env.MYSQL_ATTR_SSL_CA }}" >> .env.testing
           echo "APP_KEY=base64:BVUuj5GubObhETE2TzUUyUht+HXqwkzhHKgdcrl1UMw=" >> .env.testing
           cp .env.example .env
