--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
       MYSQL_ATTR_SSL_CA: /etc/ssl/certs/ca-certificates.crt
 
     steps:
-        # Checkout code
+      # Checkout code
       - name: Checkout code
         uses: actions/checkout@v2
 
@@ -60,38 +60,41 @@ jobs:
           PLANETSCALE_SERVICE_TOKEN: ${{ secrets.PLANETSCALE_SERVICE_TOKEN }}
         id: create_password
 
-      # Configure Laravel Environment for Testing
-      - name: Configure Laravel Environment for Testing
+      # Update .env file for development branch
+      - name: Configure Laravel Environment
         run: |
           echo "DB_CONNECTION=mysql" >> .env.testing
-          echo "DB_HOST=${{ steps.create_password.outputs.hostname }}" >> .env.testing
+          echo "DB_HOST=aws.connect.psdb.cloud" >> .env.testing
           echo "DB_PORT=3306" >> .env.testing
           echo "DB_DATABASE=${{ env.DATABASE_NAME }}" >> .env.testing
           echo "DB_USERNAME=${{ steps.create_password.outputs.username }}" >> .env.testing
           echo "DB_PASSWORD=${{ steps.create_password.outputs.password }}" >> .env.testing
           echo "MYSQL_ATTR_SSL_CA=${{ env.MYSQL_ATTR_SSL_CA }}" >> .env.testing
           echo "APP_KEY=base64:BVUuj5GubObhETE2TzUUyUht+HXqwkzhHKgdcrl1UMw=" >> .env.testing
-        shell: bash
-
-      # Set Environment Variables for Subsequent Steps
-      - name: Set Environment Variables
-        run: |
-          echo "DB_HOST=${{ steps.create_password.outputs.hostname }}" >> $GITHUB_ENV
-          echo "DB_PORT=3306" >> $GITHUB_ENV
-          echo "DB_DATABASE=${{ env.DATABASE_NAME }}" >> $GITHUB_ENV
-          echo "DB_USERNAME=${{ steps.create_password.outputs.username }}" >> $GITHUB_ENV
-          echo "DB_PASSWORD=${{ steps.create_password.outputs.password }}" >> $GITHUB_ENV
+          cp .env.testing .env
         shell: bash
 
       # Run tests
       - name: Test Run
-        run: |
-          cp .env.testing .env
-          php artisan test --without-tty tests/Feature | tee test_results
-          echo '```' >> $GITHUB_STEP_SUMMARY
-          cat test_results >> $GITHUB_STEP_SUMMARY
-          echo '```' >> $GITHUB_STEP_SUMMARY
+        run: php artisan test --without-tty tests/Feature | tee test_results
         shell: bash
+
+        # Debug Database Connection
+      - name: Debug Database Connection
+        run: |
+          echo "DB_HOST: $DB_HOST"
+          echo "DB_PORT: $DB_PORT"
+          echo "DB_USERNAME: $DB_USERNAME"
+          echo "DB_PASSWORD: $DB_PASSWORD"
+          echo "DB_DATABASE: $DB_DATABASE"
+          mysql --host="$DB_HOST" --user="$DB_USERNAME" --password="$DB_PASSWORD" --database="$DB_DATABASE" --execute="SHOW TABLES;"
+        env:
+          DB_HOST: aws.connect.psdb.cloud
+          DB_PORT: 3306
+          DB_USERNAME: ${{ steps.create_password.outputs.username }}
+          DB_PASSWORD: ${{ steps.create_password.outputs.password }}
+          DB_DATABASE: deep-dive
+
 
         # Debug Database Connection
       - name: Debug Database Connection
