--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,72 +60,10 @@ jobs:
           PLANETSCALE_SERVICE_TOKEN: ${{ secrets.PLANETSCALE_SERVICE_TOKEN }}
         id: create_password
 
-      # Update .env file for development branch
-      - name: Configure Laravel Environment
+      # Debug: Print DB username and password
+      - name: Debug DB Credentials
         run: |
-          echo "DB_CONNECTION=mysql" > .env.testing
-          echo "DB_HOST=aws.connect.psdb.cloud" >> .env.testing
-          echo "DB_PORT=3306" >> .env.testing
-          echo "DB_DATABASE=${{ env.DATABASE_NAME }}" >> .env.testing
-          echo "DB_USERNAME=${{ steps.create_password.outputs.username }}" >> .env.testing
-          echo "DB_PASSWORD=${{ steps.create_password.outputs.password }}" >> .env.testing
-          echo "MYSQL_ATTR_SSL_CA=${{ env.MYSQL_ATTR_SSL_CA }}" >> .env.testing
-          echo "APP_KEY=base64:BVUuj5GubObhETE2TzUUyUht+HXqwkzhHKgdcrl1UMw=" >> .env.testing
+          echo "DB_USERNAME: ${{ steps.create_password.outputs.username }}"
+          echo "DB_PASSWORD: ${{ steps.create_password.outputs.password }}"
         shell: bash
 
-      # Copy .env.testing to .env for Laravel
-      - name: Prepare .env for Laravel
-        run: cp .env.testing .env
-        shell: bash
-
-      # Run tests
-      - name: Test Run
-        run: php artisan test --without-tty tests/Feature | tee test_results
-        shell: bash
-
-      # Debug Database Connection
-      - name: Debug Database Connection
-        run: |
-          cat .env | grep DB_
-          mysql --host="$DB_HOST" --user="$DB_USERNAME" --password="$DB_PASSWORD" --database="$DB_DATABASE" --execute="SHOW TABLES;"
-        env:
-          DB_HOST: aws.connect.psdb.cloud
-          DB_PORT: 3306
-          DB_USERNAME: ${{ steps.create_password.outputs.username }}
-          DB_PASSWORD: ${{ steps.create_password.outputs.password }}
-          DB_DATABASE: deep-dive
-
-        # Debug Database Connection
-      - name: Debug Database Connection
-        run: |
-          echo "DB_HOST: $DB_HOST"
-          echo "DB_PORT: $DB_PORT"
-          echo "DB_USERNAME: $DB_USERNAME"
-          echo "DB_DATABASE: $DB_DATABASE"
-          mysql --host="$DB_HOST" --user="$DB_USERNAME" --password="$DB_PASSWORD" --database="$DB_DATABASE" --execute="SHOW TABLES;"
-        env:
-          DB_HOST: ${{ steps.create_password.outputs.hostname }}
-          DB_PORT: 3306
-          DB_USERNAME: ${{ steps.create_password.outputs.username }}
-          DB_PASSWORD: ${{ steps.create_password.outputs.password }}
-          DB_DATABASE: deep-dive
-
-          # Apply schema changes to development branch
-      - name: Apply schema changes to development branch
-        run: php artisan migrate --force
-
-      # Promote development branch to main (production)
-      - name: Promote development branch to main
-        run: pscale branch promote ${{ env.DATABASE_NAME }} testing
-
-      # Set up Fly.io CLI
-      - name: Setup flyctl
-        uses: superfly/flyctl-actions/setup-flyctl@master
-
-      # Deploy to Fly.io
-      - name: Deploy to fly.io
-        run: flyctl deploy
-
-      # Delete development branch after successful deployment
-      - name: Delete development branch
-        run: pscale branch delete ${{ env.DATABASE_NAME }} testing
