--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,7 +76,7 @@ jobs:
         env:
           PLANETSCALE_SERVICE_TOKEN_ID: ${{ secrets.PLANETSCALE_SERVICE_TOKEN_ID }}
           PLANETSCALE_SERVICE_TOKEN: ${{ secrets.PLANETSCALE_SERVICE_TOKEN }}
-        run: pscale branch delete ${{ secrets.DB_DATABASE }} testing --org ${{ secrets.PLANETSCALE_ORGANIZATION }}
+        run: pscale branch delete ${{ secrets.DB_DATABASE }} testing --org ${{ secrets.PLANETSCALE_ORGANIZATION }} -force
 
       # Run PlanetScale migrations
       - name: Run PlanetScale Migrations
